--- a/form_page.html
+++ b/form_page.html
@@ -16,5 +16,5 @@
     <button style="width: 200px;height: 35px;background-color: blueviolet;" >Add Note</button><br>
     <p>1.Title go to buy fruits desc is hey harry.i want you to buy fruits. delete this note ones you are done with this task</p>
     <p>2.Title but books desc is please buy books form store</p>
-
+</body>
 </html>
