--- a/html_character.html
+++ b/html_character.html
@@ -11,6 +11,7 @@
         <p>Another charater is &rAarr;</p>
         <p>Another charater is &frac14;</p>
         <p>Empty character is written like this &#8203;</p>
+        <p>Three line character is written like this &#9776;</p>
         <p>Non-breaking space character name &nbsp; is written like in number &#160;</p>
         <p>Less than character name &lt; is written like in number &#60;</p>
         <p>Greater than character name &gt; is written like in number &#62;</p>
